--- a/.env.live
+++ b/.env.live
@@ -1,12 +1,9 @@
-APP_NAME=Laravel
+APP_NAME="First Call Distribution India"
 APP_ENV=local
 APP_KEY=base64:WhUgrg+TzTP49ntALm4DW9IEs910Y1mw88sNUk9kYHw=
 APP_DEBUG=true
-# APP_URL=http://127.0.0.1:8000/public
-# ASSET_URL=http://127.0.0.1:8000/public
-
-APP_URL=http://127.0.0.1:8000
-ASSET_URL=http://127.0.0.1:8000
+APP_URL=https://distro.firstcalldistribution.in/public
+ASSET_URL=https://distro.firstcalldistribution.in/public
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -15,9 +12,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE='filament-learning'
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=firstca1_mdi
+DB_USERNAME=firstca1_mdi
+DB_PASSWORD=firstca1_mdi
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -31,6 +28,15 @@ MEMCACHED_HOST=127.0.0.1
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+
+MAIL_MAILER="smtp"
+MAIL_HOST="mail.firstcalldistribution.in"
+MAIL_PORT="465"
+MAIL_USERNAME="info@firstcalldistribution.in"
+MAIL_PASSWORD="Aru@#$9897"
+MAIL_ENCRYPTION="tls"
+MAIL_FROM_ADDRESS="info@firstcalldistribution.in"
+MAIL_FROM_NAME="First Call Distribution India"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
