Implement OTP login feature with configuration, model, and migration setup

--- a/.env
+++ b/.env
@@ -19,6 +19,15 @@ DB_DATABASE='filament-learning'
 DB_USERNAME=root
 DB_PASSWORD=
 
+MAIL_MAILER="smtp"
+MAIL_HOST="mail.firstcalldistribution.in"
+MAIL_PORT="465"
+MAIL_USERNAME="info@firstcalldistribution.in"
+MAIL_PASSWORD="Aru@#$9897"
+MAIL_ENCRYPTION="tls"
+MAIL_FROM_ADDRESS="info@firstcalldistribution.in"
+MAIL_FROM_NAME="First Call Distribution India"
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
